first version, sec commit

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ body{
 .head {
     height: 80px;
     width: 1280px;
-    background-color: aliceblue;
+    background-color: #3694f438;
 }
 
 .head .mynav{
