--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
 
 
 {% if role == "teacher" %}
-    <div class="head" style="background-color: gray">
+    <div class="head" style="background-color: #607d8b99">
         <div class="logo">
              <img src="/static/img/logo.png">
          </div>
