--- a/templates/Teachers_lineup.html
+++ b/templates/Teachers_lineup.html
@@ -6,121 +6,25 @@
     <div id="fh5co-blog">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
-                            <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
-                            <!--<a href="#" class="btn btn-primary"></a>-->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
-                            <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
-                            <!--<a href="#" class="btn btn-primary"></a>-->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
-                            <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
-                            <!--<a href="#" class="btn btn-primary"></a>-->
-                        </div>
-                    </div>
-                </div>
-                <!--<div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" src="/static/img/project-2.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
-                            <span class="posted_on">Nov. 15th</span>
-                            <span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <a href="#" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" src="/static/img/project-3.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3><a href=""#>45 Minimal Workspace Rooms for Web Savvys</a></h3>
-                            <span class="posted_on">Nov. 15th</span>
-                            <span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <a href="#" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
-                </div>-->
 
+                {% for teacher in tea_list %}
                 <div class="col-lg-4 col-md-4">
                     <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
+                        <a href="#"><img class="img-responsive" style="border-radius: 50%;width:251px;margin: 0 auto; "
+                                         src="/static/img/tea.png" alt=""></a>
                         <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
+                            <h3 class="text-center">{{ teacher.t_name }}</h3>
+                            {% load str_time %}
+                            <span class="posted_on">入职时间；{{ teacher.t_create_time|strd_time }}</span>
+
                             <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
+                            <p>简要介绍:{{ teacher.t_detail }}</p>
                             <!--<a href="#" class="btn btn-primary"></a>-->
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
-                            <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
-                            <!--<a href="#" class="btn btn-primary"></a>-->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" style="border-radius: 50%;"
-                                         src="/static/img/project-4.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3 class="text-center">叶良辰</h3>
-                            <span class="posted_on">入职时间；</span>
-                            <!--<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>-->
-                            <p>简要介绍，比如说讲课的方式风趣幽默什么的</p>
-                            <!--<a href="#" class="btn btn-primary"></a>-->
-                        </div>
-                    </div>
-                </div>
-                <!--<div class="col-lg-4 col-md-4">
-                    <div class="fh5co-blog animate-box">
-                        <a href="#"><img class="img-responsive" src="/static/img/project-5.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h3><a href=""#>45 Minimal Workspace Rooms for Web Savvys</a></h3>
-                            <span class="posted_on">Nov. 15th</span>
-                            <span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                            <a href="#" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
-                </div>-->
+                {% endfor %}
+
             </div>
         </div>
     </div>
