--- a/templates/index.html
+++ b/templates/index.html
@@ -102,15 +102,16 @@
                 </div>
             </div>
             <div class="row">
-                {% for article in article_list %}
+                {% for article in article_list2 %}
                     <div class="col-lg-4 col-md-4">
                         <div class="fh5co-blog animate-box">
                             <div class="blog-text">
-                                <a href="/article/{{ article.s_id }}"><img class="img-responsive"
+                                <a href="/article/{{ article.s_id }}"><img class="img-responsive img_hover"
                                                                            src="{{ article.s_imgurl }}" alt=""></a>
-                                <h3><a href="/article/{{ article.s_id }}">{{ article.s_title }}</a></h3>
+                                <h3 class="blog_title"><a href="/article/{{ article.s_id }}">{{ article.s_title }}</a>
+                                </h3>
                                 <span class="posted_on">{{ article.t_createtime }}</span>
-                                <p>{{ article.s_summary }}</p>
+                                <p class="blog_content">{{ article.s_summary }}</p>
                             </div>
                         </div>
                     </div>
